--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -89,13 +89,9 @@
         <img height=100 src="C:\Users\Localuser\Downloads\porsche.jpg" alt="rental mobil mewah" />
 
         <img height=100 src="C:\Users\Localuser\Downloads\porsche.jpg" alt="rental mobil mewah" />
-
-
     </div>
 
-
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, voluptate?</p>
+    <script src="assets/js/script.js"></script>
 
 </body>
 
