--- a/bootstrap/bootstrap.html
+++ b/bootstrap/bootstrap.html
@@ -359,16 +359,12 @@
                 </div>
 
                 <div id="navigation">
-                    <p1>Our Services</p1>
-                    <br>
-                    <br>
-                    <p2>Why us</p2>
-                    <br>
-                    <br>
-                    <p3>Testimonial</p3>
-                    <br>
-                    <br>
-                    <p4>FAQ</p4>
+                    <ul>
+                        <li>Our Services</li>
+                        <li>Why us</li>
+                        <li>Testimonial</li>
+                        <li>FAQ</li>
+                    </ul>
                 </div>
 
                 <div id="sosmed">
